# filipino-tokenizer

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml  setup.py
.claude/: SKILL.md  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  publish.yml
data/: infix_table.json  prefix_table.json
demo/: demo_tagalog_tokenizer.ipynb  filipino-tokenizer-experiment.ipynb  slm_tokenizer_comparison.ipynb  slm_training_experiment.ipynb  tokenizer_comparisons.ipynb  tokenizer_comparisons_fil.ipynb
demo/models/: spm.model  spm.vocab
demo/models/morph/: merges.txt  vocab.json
demo/models/plain/: merges.txt  vocab.json
docs/: changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst
docs/api/: bpe.rst  hf_tokenizer.rst  segmenter.rst  tokenizer.rst
docs/guides/: developers.rst  researchers.rst
examples/: training_tagalog_tokenizer.py
filipino_tokenizer/: __init__.py  base.py
filipino_tokenizer/data/: README.md  circumfix_table.json  suffix_table.json
filipino_tokenizer/data/pretrained/: vocab.json
filipino_tokenizer/tagalog/: __init__.py  affixes.py  bpe.py  hf_tokenizer.py  roots.py  segmenter.py  tokenizer.py
scripts/: download_corpus.py
src/: base.py  lib.rs
src/cebuano/: affixes.py
src/tagalog/: __init__.py  affixes.py  bpe.py  phonology.py  roots.py  segmenter.py  tokenizer.py
tests/: test_affixes.py  test_rust_backend.py  test_segmenter.py  test_tokenizer.py
